# vault-ask

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  vault_ask.py
.github/workflows/: ci.yml  release.yml
examples/: README.md
examples/demo-vault/Decisions/: 2026-pricing.md  2026-stack.md
examples/demo-vault/Meetings/: 2026-01-pricing-review.md
tests/: test_vault_ask.py
