[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-ask"
version = "0.2.0"
description = "Ask your Obsidian vault with fail-closed citation validation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "guillaumevele" }]
keywords = [
    "obsidian", "rag", "llm", "cli", "knowledge-management",
    "second-brain", "ripgrep", "grounded-generation", "note-taking",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/guillaumevele/vault-ask"
Repository = "https://github.com/guillaumevele/vault-ask"
Issues = "https://github.com/guillaumevele/vault-ask/issues"

[project.scripts]
vault-ask = "vault_ask:main"

[tool.setuptools]
py-modules = ["vault_ask"]
